# real-time-decision-pipeline

./: .gitignore  README.md  pyproject.toml
src/constrain/: README.md
src/decide/: README.md
src/evaluate/: README.md
src/expose/: README.md
src/ingest/: README.md
src/observe/: README.md
src/rtp/: engine.py  registry.py
src/rtp/app/: main.py  routes.py
src/rtp/constrain/: base.py
src/rtp/core/: context.py  contracts.py
src/rtp/decide/: base.py
src/rtp/evaluate/: base.py
src/rtp/examples/minimal/: example.py
src/rtp/expose/: base.py
src/rtp/ingest/: base.py
src/rtp/observe/: base.py
src/rtp/patterns/decide/: threshold_action.py
src/rtp/pipeline/: factory.py  pipeline.py
tests/: test_smoke.py
